# DD2360

Assignment_2/: a.out  excercise_2.cu  excercise_3.cu  excersice_bonus.cu
Assignment_2/ex_1/: CMakeLists.txt  a.out  d:myfileStdOut.txt  exercise_1.cu  kernels.cu  readme
Assignment_2/ex_2/: exercise_2.cu  readme  utils.h
Assignment_2/ex_3/: bench.py  ex_3  exercise_3.cu  readme
Assignment_2/ex_bonus/: ex_bonus  exercise_bonus.cu  readme
Assignment_3/ex_1/: a.out  ex_1  ex_1.cu  hw3_ex1.cu  readme
Assignment_3/ex_2/: a.out  ex_2  exercise_2a.cu  exercise_2b.cu  readme  utils.h
Assignment_3/ex_3/: a.out  exercise_3.cu  readme
Assignment_3/ex_bonus/: bench.py  exercise_bonus.cu  readme
Assignment_4/ex_1/: a.out  exercise_1.cpp  readme  utils.h
Assignment_4/ex_2/: a.out  exercise_2.cpp  readme  utils.h
Assignment_4/ex_3/: a.out  bench.py  ex_3  exercise_3.cpp  readme  utils.h
Assignment_4/ex_bonus/: CL.txt  Makefile  a.out  bench.py  ex_bonus  exercise_bonus.cpp  readme  utils.h
